--- a/index.html
+++ b/index.html
@@ -4,30 +4,57 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NSS Music History</title>
+  <title>Music History</title>
   <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="styles/main.css" type="text/css">
 </head>
 <body ng-app="musicHistoryApp">
-  <div class="container">
-    <div class="row row-eq-height">
-      <div ng-view></div>
-    </div>
-  </div> <!--CLOSE: container -->
 
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Music History</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li id="homeNav" class="active"><a href="#/main/list">Music<span class="sr-only">(current)</span></a></li>
+        <li id="addSongNav"><a href="#/add">Add</a></li>
+      </ul>
+      <form class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+  <div class="section">
+    <div class="container">
+      <div class="row row-eq-height">
+        <ui-view /></ui-view>
+        <!-- <div ng-show="songlist" class="songlist" ng-repeat="song in songlist">{{song.songName}}</div ng-show> -->
+      </div>
+    </div> <!-- CLOSE: container -->
+  </div>
   <script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="lib/bower_components/angular/angular.min.js"></script>
-  <script src="lib/bower_components/angular-route/angular-route.js"></script>
+  <script src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="lib/bower_components/angular/angular.js"></script>
   <script src="lib/bower_components/angular-filter/dist/angular-filter.min.js"></script>
+  <script src="lib/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="lib/bower_components/firebase/firebase.js"></script>
   <script src="lib/bower_components/angularfire/dist/angularfire.min.js"></script>
   <script src="app/app.js"></script>
-<!--   // <script src="app/factories/simple_storage.js"></script>
-  // <script src="app/factories/song_storage.js"></script> -->
-  <!-- // <script src="app/controllers/songlist.js"></script> -->
+  <script src="app/factories/song_storage.js"></script>
   <script src="app/controllers/SongListCtrl.js"></script>
   <script src="app/controllers/AddSongCtrl.js"></script>
-  <script src="app/filters/capitalize.js"></script>
 </body>
 
 </html>
