--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music History</title>
   <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <!-- <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" type="text/css"> -->
   <link rel="stylesheet" href="styles/main.css" type="text/css">
 </head>
-<body ng-app="musicHistoryApp">
 
+<body>
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -44,17 +44,18 @@
       </div>
     </div> <!-- CLOSE: container -->
   </div>
-  <script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="lib/bower_components/angular/angular.js"></script>
-  <script src="lib/bower_components/angular-filter/dist/angular-filter.min.js"></script>
-  <script src="lib/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-  <script src="lib/bower_components/firebase/firebase.js"></script>
-  <script src="lib/bower_components/angularfire/dist/angularfire.min.js"></script>
-  <script src="app/app.js"></script>
-  <script src="app/factories/song_storage.js"></script>
-  <script src="app/controllers/SongListCtrl.js"></script>
-  <script src="app/controllers/AddSongCtrl.js"></script>
+  <script src="lib/bower_components/requirejs/require.js" data-main="app/require-config.js"></script>
+  <!-- <script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
+  // <script src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  // <script src="lib/bower_components/angular/angular.js"></script>
+  // <script src="lib/bower_components/angular-filter/dist/angular-filter.min.js"></script>
+  // <script src="lib/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  // <script src="lib/bower_components/firebase/firebase.js"></script>
+  // <script src="lib/bower_components/angularfire/dist/angularfire.min.js"></script>
+  // <script src="app/app.js"></script>
+  // <script src="app/factories/song_storage.js"></script>
+  // <script src="app/controllers/SongListCtrl.js"></script>
+  // <script src="app/controllers/AddSongCtrl.js"></script> -->
 </body>
 
 </html>
